# alphagraph

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/data/: prices.csv
backend/src/alphagraph/: __init__.py  api.py  app.py  schemas.py  service.py
backend/src/alphagraph/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/src/alphagraph/llm/: __init__.py  provider.py
backend/src/alphagraph/prompts/: codegen.md  critic.md  hypothesis.md
backend/src/alphagraph/runtime/: __init__.py  backtest_engine.py  factor_dsl.py  sandbox.py
backend/src/alphagraph/storage/: __init__.py  artifacts.py  db.py
backend/tests/: test_api.py  test_backtest_engine.py  test_factor_dsl.py  test_graph_loop.py  test_provider_routing.py  test_state_contracts.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  GraphScene.tsx  api.ts  components.tsx  styles.css
frontend/tests/: demo.spec.ts
