[project]
name = "alphagraph-backend"
version = "0.1.0"
description = "AlphaGraph MVP backend"
readme = "../README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=1.0.0,<2.0.0",
  "langgraph-checkpoint-sqlite>=2.0.0,<3.0.0",
  "numpy>=2.1,<3.0",
  "openai>=1.99,<2.0",
  "pandas>=2.2,<3.0",
  "pydantic>=2.10,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphagraph"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
